// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handle should match snapshot 1`] = `
<div
  aria-disabled={false}
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={30}
  className="ghhiOS"
  role="slider"
  style={
    Object {
      "left": "10%",
    }
  }
/>
`;

exports[`Track should match snapshot 1`] = `
<div
  className="jWGnDa"
  style={
    Object {
      "left": "10%",
      "width": "30%",
    }
  }
/>
`;
